@@ -31,5 +31,5 @@ Bayesian updating
     RandomWalkMetropolisHastings
     IndependentMetropolisHastings
     RandomVectorMetropolisHastings
-    UserDefinedMetropolisHastings
     Gibbs
+    experimental.UserDefinedMetropolisHastings
