@@ -41,7 +41,6 @@
 %include RandomVectorMetropolisHastings.i
 %include RandomWalkMetropolisHastings.i
 %include IndependentMetropolisHastings.i
-%include UserDefinedMetropolisHastings.i
 %include Gibbs.i
 
 /* At last we include template definitions */
