@@ -29,6 +29,7 @@
 === Documentation ===
 
 === Python module ===
+ * New experimental submodule introducing newest classes until stabilization
 
 === Miscellaneous ===
 
